[gd_scene load_steps=20 format=3 uid="uid://bjdfbpoc08sb3"]

[ext_resource type="Texture2D" uid="uid://bavpfbma4sa3u" path="res://assests/temple/items/Door.png" id="1_hpvv5"]
[ext_resource type="Script" uid="uid://tjgdyveag21g" path="res://scripts/door.gd" id="1_uvdjg"]
[ext_resource type="Texture2D" uid="uid://vdyva6kvu8yr" path="res://assests/temple/items/dark bg.jpg" id="2_83dcw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uvdjg"]
atlas = ExtResource("1_hpvv5")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_83dcw"]
atlas = ExtResource("1_hpvv5")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la1wf"]
atlas = ExtResource("1_hpvv5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18pbm"]
atlas = ExtResource("1_hpvv5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5w8r"]
atlas = ExtResource("1_hpvv5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t58dd"]
atlas = ExtResource("1_hpvv5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju5n0"]
atlas = ExtResource("1_hpvv5")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgbum"]
atlas = ExtResource("1_hpvv5")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg2b6"]
atlas = ExtResource("1_hpvv5")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey00f"]
atlas = ExtResource("1_hpvv5")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ayau"]
atlas = ExtResource("1_hpvv5")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41c0y"]
atlas = ExtResource("1_hpvv5")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_j2w5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uvdjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83dcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la1wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18pbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5w8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t58dd")
}],
"loop": false,
"name": &"close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju5n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgbum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg2b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey00f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ayau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41c0y")
}],
"loop": false,
"name": &"open",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpvv5"]
size = Vector2(39, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83dcw"]
size = Vector2(22, 19.8333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvdjg"]
size = Vector2(28, 31.5833)

[node name="door" type="StaticBody2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_uvdjg")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0.666666, -16)
texture = ExtResource("1_hpvv5")
hframes = 6
vframes = 2
frame = 6

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.666667, -15)
scale = Vector2(0.11245, 0.194805)
texture = ExtResource("2_83dcw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.666667, -16)
sprite_frames = SubResource("SpriteFrames_j2w5t")
animation = &"open"
autoplay = "close"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -15)
shape = SubResource("RectangleShape2D_hpvv5")

[node name="exit area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit area"]
position = Vector2(0, -18.5833)
shape = SubResource("RectangleShape2D_83dcw")
debug_color = Color(0.997159, 0, 0.17201, 0.42)

[node name="activate door" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="activate door"]
position = Vector2(0, 7.54167)
shape = SubResource("RectangleShape2D_uvdjg")
debug_color = Color(0.607116, 0.540371, 0, 0.42)

[connection signal="body_entered" from="exit area" to="." method="_on_exit_area_body_entered"]
[connection signal="body_entered" from="activate door" to="." method="_on_activate_door_body_entered"]
[connection signal="body_exited" from="activate door" to="." method="_on_activate_door_body_exited"]
